doc: add Case docs

--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -1,4 +1,4 @@
-{"version": 5,
+{"version": 6,
  "packagesDir": "lake-packages",
  "packages":
  [{"git":
@@ -40,4 +40,5 @@
     "opts": {},
     "name": "leanInk",
     "inputRev?": "doc-gen",
-    "inherited": true}}]}
+    "inherited": true}}],
+ "name": "«lean-gccjit»"}
