--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -1,4 +1,4 @@
-{"version": 6,
+{"version": 5,
  "packagesDir": "lake-packages",
  "packages":
  [{"git":
@@ -40,5 +40,4 @@
     "opts": {},
     "name": "leanInk",
     "inputRev?": "doc-gen",
-    "inherited": true}}],
- "name": "«lean-gccjit»"}
+    "inherited": true}}]}
